docs/api/qiskit-ibm-runtime/0.47/session.mdx
---
title: Session (v0.47)
description: API reference for qiskit_ibm_runtime.Session in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.Session
---

# Session

<Class id="qiskit_ibm_runtime.Session" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L46-L424" signature="Session(backend, max_time=None, *, create_new=True)" modifiers="class">
  Bases: `object`

  Class for creating a Qiskit Runtime session.

  A Qiskit Runtime `session` allows you to group a collection of iterative calls to the quantum computer. A session is started when the first job within the session is started. Subsequent jobs within the session are prioritized by the scheduler.

  You can open a Qiskit Runtime session using this `Session` class and submit jobs to one or more primitives.

  For example:

  ```python
  from qiskit.circuit import QuantumCircuit, QuantumRegister, ClassicalRegister
  from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
  from qiskit_ibm_runtime import QiskitRuntimeService, Session, SamplerV2 as Sampler

  service = QiskitRuntimeService()
  backend = service.least_busy(operational=True, simulator=False)

  # Bell Circuit
  qr = QuantumRegister(2, name="qr")
  cr = ClassicalRegister(2, name="cr")
  qc = QuantumCircuit(qr, cr, name="bell")
  qc.h(qr[0])
  qc.cx(qr[0], qr[1])
  qc.measure(qr, cr)

  pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
  isa_circuit = pm.run(qc)

  with Session(backend=backend) as session:
      sampler = Sampler(mode=session)
      job = sampler.run([isa_circuit])
      pub_result = job.result()[0]
      print(f"Sampler job ID: {job.job_id()}")
      print(f"Counts: {pub_result.data.cr.get_counts()}")
  ```

  **Parameters**

  *   **backend** (*BackendV2*) – Instance of `Backend` class.
  *   **max\_time** (*int | str | None*) – Maximum amount of time, a runtime session can be open before being forcibly closed. Can be specified as seconds (int) or a string like “2h 30m 40s”. This value must be less than the [system imposed maximum](/docs/guides/max-execution-time).
  *   **create\_new** (*bool | None*) – If True, the POST session API endpoint will be called to create a new session. Prevents creating a new session when `from_id()` is called.

  **Raises**

  **ValueError** – If an input value is invalid.

  ## Attributes

  ### service

  <Attribute id="qiskit_ibm_runtime.Session.service">
    Return service associated with this session.

    **Returns**

    [`qiskit_ibm_runtime.QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") associated with this session.
  </Attribute>

  ### session\_id

  <Attribute id="qiskit_ibm_runtime.Session.session_id">
    Return the session ID.

    **Returns**

    Session ID. None if the backend is a simulator.
  </Attribute>

  ## Methods

  ### backend

  <Function id="qiskit_ibm_runtime.Session.backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L210-L218" signature="backend()">
    Return backend for this session.

    **Returns**

    Backend for this session. None if unknown.

    **Return type**

    str | None
  </Function>

  ### cancel

  <Function id="qiskit_ibm_runtime.Session.cancel" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L193-L197" signature="cancel()">
    Cancel all pending jobs in a session.

    **Return type**

    None
  </Function>

  ### close

  <Function id="qiskit_ibm_runtime.Session.close" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L199-L208" signature="close()">
    Close the session so new jobs will no longer be accepted.

    Close the session so new jobs will no longer be accepted, but existing queued or running jobs will run to completion. The session will be terminated once there are no more pending jobs.

    **Return type**

    None
  </Function>

  ### details

  <Function id="qiskit_ibm_runtime.Session.details" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L263-L308" signature="details()">
    Return session details.

    **Returns**

    A dictionary with the sessions details.

    *   `id`: id of the session.
    *   `backend_name`: backend used for the session.
    *   `interactive_timeout`: The maximum idle time (in seconds) between jobs that is allowed to occur before the session is deactivated.
    *   `max_time`: Maximum allowed time (in seconds) for the session, subject to plan limits.
    *   `active_timeout`: The maximum time (in seconds) a session can stay active.
    *   `state`: State of the session - open, active, inactive, or closed.
    *   `accepting_jobs`: Whether or not the session is accepting jobs.
    *   `last_job_started`: Timestamp of when the last job in the session started.
    *   `last_job_completed`: Timestamp of when the last job in the session completed.
    *   `started_at`: Timestamp of when the session was started.
    *   `closed_at`: Timestamp of when the session was closed.
    *   `activated_at`: Timestamp of when the session state was changed to active.
    *   `mode`: Execution mode of the session.
    *   `usage_time`: The usage time, in seconds, of this Session or Batch. Usage is defined as the time a quantum system is committed to complete a job.

    **Return type**

    dict\[str, *Any*] | None
  </Function>

  ### from\_id

  <Function id="qiskit_ibm_runtime.Session.from_id" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L328-L411" signature="from_id(session_id, service, use_fractional_gates=False, calibration_id=None)" modifiers="classmethod">
    Construct a Session object with a given `session_id`.

    For example:

    ```python
    from qiskit_ibm_runtime import QiskitRuntimeService, Session
    service = QiskitRuntimeService()
    job = service.job(<job_id>)
    existing_session_id = job.session_id

    new_session = Session.from_id(existing_session_id, service)
    ```

    **Parameters**

    *   **session\_id** (*str*) – The id of the session to be created. This must be an already existing session id.
    *   **service** ([*QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService")) – Instance of the `QiskitRuntimeService` class. If using multiple instances, note that the active cloud instance in the `service` will be replaced with the one that has access to that `session_id`. Please check the [`QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") documentation on using multiple instances and the [`active_instance()`](qiskit-runtime-service#active_instance "qiskit_ibm_runtime.QiskitRuntimeService.active_instance") method for checking which is the active instance.
    *   **use\_fractional\_gates** (*bool*) – Whether or not to allow fractional gates for the backend that is used to create the session.
    *   **calibration\_id** (*str | None*) – The calibration id for the backend that is used to create the session.

    **Raises**

    *   **IBMInputValueError** – If given session\_id does not exist.
    *   **IBMRuntimeError** – If the backend of the session is unknown.

    **Returns**

    A new Session with the given `session_id`

    **Return type**

    [*Session*](#qiskit_ibm_runtime.Session "qiskit_ibm_runtime.session.Session")
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.Session.status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L220-L245" signature="status()">
    Return current session status.

    **Returns**

    Session status as a string.

    *   `Pending`: Session is created but not active. It will become active when the next job of this session is dequeued.
    *   `In progress, accepting new jobs`: session is active and accepting new jobs.
    *   `In progress, not accepting new jobs`: session is active and not accepting new jobs.
    *   `Closed`: max\_time expired or session was explicitly closed.
    *   `None`: status details are not available.

    **Return type**

    str | None
  </Function>

  ### usage

  <Function id="qiskit_ibm_runtime.Session.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/session.py#L247-L261" signature="usage()">
    Return session usage in seconds.

    Session usage is the time from when the first job starts until the session goes inactive, is closed, or when its last job completes, whichever happens last.

    Batch usage is the amount of time all jobs spend on the QPU.

    **Return type**

    float | None
  </Function>
</Class>

